Centered name, fixed picture alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,8 +3,8 @@
 body {
 	font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 96%;
-    max-width: 1200px;
+    width: 99%;
+    max-width: 1300px;
 	background-color: #FDF9ED;
 	margin: 15px auto;
 	padding: 15px 0;
@@ -46,20 +46,21 @@ header h2 {
     sans-serif;
     font-family: 'Source Code Pro',
     monospace;
-	font-size: 3em;
+	font-size: 4em;
     color: #90ee90;
     text-shadow: 2px 3px 0 black;
-    margin-left: 1%;
-	margin-bottom: .25em;
+    margin-left: 35%;
+
 }
 header h3 {
-	font-size: 1.25em;
+	font-size: 2.5em;
 	font-style: italic;
     margin-left: 1%;
+	margin-left: 45%;
 }
 header img {
     width: 8%;
-    max-width: 80px;
+    max-width: 100px;
     min-width: 40px;
 	float: left;
 	margin-left: 2%;
@@ -161,12 +162,14 @@ section h2 {
 	margin-bottom: 0.35em;
 }
 
+
+
 #contact_us { margin-top: 1em; }
 a.date_passed  { color: gray; }
 
 /* the styles for the sidebar */
 aside {
-    max-height: 320px;
+    max-height: 180px;
     min-height: 200px;    
 	padding: 5%;
 	background-color: #90ee90;
@@ -277,7 +280,7 @@ footer p {
 	    padding-right: 0;
     }
     aside {
- 	    width: 92%;
+ 	    width: 88%;
         margin: 0 2%;
         padding: 2%;
     }
